tests/ui/generics/overlapping-errors-span-issue-123861.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/overlapping-errors-span-issue-123861.rs:1:17
   |
LL | fn mainIterator<_ = _> {}
   |                 ^ expected identifier, found reserved identifier

error: missing parameters for function definition
  --> $DIR/overlapping-errors-span-issue-123861.rs:1:23
   |
LL | fn mainIterator<_ = _> {}
   |                       ^
   |
help: add a parameter list
   |
LL | fn mainIterator<_ = _>() {}
   |                       ++

error: defaults for generic parameters are not allowed here
  --> $DIR/overlapping-errors-span-issue-123861.rs:1:17
   |
LL | fn mainIterator<_ = _> {}
   |                 ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>
   = note: `#[deny(invalid_type_param_default)]` (part of `#[deny(future_incompatible)]`) on by default

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/overlapping-errors-span-issue-123861.rs:1:21
   |
LL | fn mainIterator<_ = _> {}
   |                     ^ not allowed in type signatures

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0121`.
Future incompatibility report: Future breakage diagnostic:
error: defaults for generic parameters are not allowed here
  --> $DIR/overlapping-errors-span-issue-123861.rs:1:17
   |
LL | fn mainIterator<_ = _> {}
   |                 ^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>
   = note: `#[deny(invalid_type_param_default)]` (part of `#[deny(future_incompatible)]`) on by default

